--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -17,15 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 141 ms\n",
-      "Wall time: 2.78 s\n"
+      "CPU times: total: 234 ms\n",
+      "Wall time: 2.62 s\n"
      ]
     }
    ],
@@ -201,78 +201,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# негодная функция\n",
+    "# def region_name(name_1, name_2):\n",
+    "#     \"\"\"функция возвращает правильное название региона\"\"\"\n",
+    "#     ratio = len(set(words(name_1) + words(name_2))) / len(words(name_1) + words(name_2))\n",
+    "#     if ratio < 0.61 and len(name_1) > len(name_2):\n",
+    "#         return name_1\n",
+    "#     elif ratio < 0.61 and len(name_1) < len(name_2):\n",
+    "#         return name_2\n",
+    "#     else:\n",
+    "#         pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def words(string):\n",
-    "    \"\"\"преобразование строки в список, элементами которого являются\n",
-    "    части строки, разбитой по неалфавитным символам. Все элементы списка\n",
-    "    приведены к нижнему регистру\"\"\"\n",
+    "    \"\"\"возвращает список значимых слов в названии субъекта,\n",
+    "    приведённых к нижнему регистру\"\"\"\n",
     "    str = \"\"\n",
+    "    tp_list = [\"республика\", \"край\", \"область\", \"автономный\", \"автономная\", \"округ\"]\n",
     "    for symbol in string:\n",
     "        symbol = symbol if symbol.isalpha() else \"$\"\n",
     "        str = str + symbol\n",
     "    lst = str.split(\"$\")\n",
     "    while \"\" in lst:\n",
     "        lst.remove(\"\")\n",
-    "    return [element.lower() for element in lst]\n",
-    "\n",
-    "\n",
-    "def region_name(name_1, name_2):\n",
-    "    \"\"\"функция возвращает правильное название региона\"\"\"\n",
-    "    ratio = len(set(words(name_1) + words(name_2))) / len(words(name_1) + words(name_2))\n",
-    "    if ratio < 0.61 and len(name_1) > len(name_2):\n",
-    "        return name_1\n",
-    "    elif ratio < 0.61 and len(name_1) < len(name_2):\n",
-    "        return name_2\n",
-    "    else:\n",
-    "        pass"
+    "    lst = [element.lower() for element in lst]\n",
+    "    for w in tp_list:\n",
+    "        while w in lst:\n",
+    "            lst.remove(w)\n",
+    "    return lst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "# s_1 = 'Ханты-Мансийский автономный округ - Югра'\n",
-    "# s_2 = 'Ханты-Мансийский автономный округ -Югра'\n",
-    "s_1 = \"Республика Адыгея\"\n",
-    "s_2 = \"Республика Татарстан (Татарстан)\"\n",
-    "res = region_name(s_1, s_2)\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Чувашская республика - Чувашия'"
+       "['рсо', 'алания']"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s_1 = 'Чувашская республика - Чувашия'\n",
-    "s_2 = 'Чувашская республика'\n",
-    "region_name (s_1, s_2)"
+    "s_2 = 'Республика Северная Осетия - Алания'\n",
+    "s_2 = 'РСО - Алания'\n",
+    "wrd = words(s_2)\n",
+    "wrd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['чувашская', 'чувашия']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
