--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -17,15 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 234 ms\n",
-      "Wall time: 2.62 s\n"
+      "CPU times: total: 0 ns\n",
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -51,10 +51,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 25.3 s\n",
+      "Wall time: 1min 9s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "df_dt = pd.DataFrame()\n",
     "for file in source_files_list:\n",
     "    df_tmp = pd.read_csv(\n",
@@ -62,25 +72,9 @@
     "        sep=\";\",\n",
     "        encoding=\"ansi\",\n",
     "    )\n",
-    "    df_dt = pd.concat([df_dt, df_tmp])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_dt = df_dt.replace(\",\", \".\", regex=True).apply(pd.to_numeric, errors=\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_dt['3. Адрес МО. Наим. субъекта РФ'] = df_dt['3. Адрес МО. Наим. субъекта РФ'].fillna('не определён')"
+    "    df_dt = pd.concat([df_dt, df_tmp])\n",
+    "df_dt = df_dt.replace(\",\", \".\", regex=True).apply(pd.to_numeric, errors=\"ignore\")\n",
+    "df_dt['3. Адрес МО. Наим. субъекта РФ'] = df_dt['3. Адрес МО. Наим. субъекта РФ'].fillna('no_region')"
    ]
   },
   {
@@ -92,142 +86,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# список регионов\n",
     "df_regions = pd.DataFrame(df_dt['3. Адрес МО. Наим. субъекта РФ']).drop_duplicates().reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>3. Адрес МО. Наим. субъекта РФ</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>не определён</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Алтайский край</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Амурская область</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Архангельская область</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Астраханская область</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  3. Адрес МО. Наим. субъекта РФ\n",
-       "0                   не определён\n",
-       "1                 Алтайский край\n",
-       "2               Амурская область\n",
-       "3          Архангельская область\n",
-       "4           Астраханская область"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_regions.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8888888888888888\n"
-     ]
-    }
-   ],
-   "source": [
-    "# сравнение текстов - не поможет, к сожалению\n",
-    "import difflib\n",
-    "\n",
-    "def similarity(s1, s2):\n",
-    "  \"\"\"сравнение текстов\"\"\"\n",
-    "  normalized1 = s1.lower()\n",
-    "  normalized2 = s2.lower()\n",
-    "  matcher = difflib.SequenceMatcher(None, normalized1, normalized2)\n",
-    "  return matcher.ratio()\n",
-    "s1 = 'Краснодартский край'\n",
-    "s2 = 'Красноярский край'\n",
-    "print(similarity(s1, s2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# негодная функция\n",
-    "# def region_name(name_1, name_2):\n",
-    "#     \"\"\"функция возвращает правильное название региона\"\"\"\n",
-    "#     ratio = len(set(words(name_1) + words(name_2))) / len(words(name_1) + words(name_2))\n",
-    "#     if ratio < 0.61 and len(name_1) > len(name_2):\n",
-    "#         return name_1\n",
-    "#     elif ratio < 0.61 and len(name_1) < len(name_2):\n",
-    "#         return name_2\n",
-    "#     else:\n",
-    "#         pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# функции\n",
     "def words(string):\n",
     "    \"\"\"возвращает список значимых слов в названии субъекта,\n",
     "    приведённых к нижнему регистру\"\"\"\n",
     "    str = \"\"\n",
-    "    tp_list = [\"республика\", \"край\", \"область\", \"автономный\", \"автономная\", \"округ\"]\n",
+    "    tp_list = [\"республика\", \"край\", \"область\", \"автономный\", \"автономная\", \"округ\", \"народная\", \"г\"]\n",
     "    for symbol in string:\n",
     "        symbol = symbol if symbol.isalpha() else \"$\"\n",
     "        str = str + symbol\n",
@@ -238,54 +116,37 @@
     "    for w in tp_list:\n",
     "        while w in lst:\n",
     "            lst.remove(w)\n",
-    "    return lst"
+    "    return lst\n",
+    "\n",
+    "def letter(word_1, word_2):\n",
+    "    \"\"\"побуквенное сравнение слов\n",
+    "    возвращает долю совпавших букв в слове с наименьшим числом символов\"\"\"\n",
+    "    k = 0\n",
+    "    for i in range(min(len(word_1), len(word_2)) - 1):\n",
+    "        if (word_1[i].lower() == word_2[i].lower()) and (word_1[i+1].lower() == word_2[i+1].lower()):\n",
+    "            k += 1\n",
+    "    return k/min(len(word_1), len(word_2))\n",
+    "\n",
+    "def real_region_name (region_name_1, region_name_2):\n",
+    "    \"\"\"возвращает \"правильное\" название региона\"\"\"\n",
+    "    lst_1 = words(region_name_1)\n",
+    "    lst_2 = words(region_name_2)\n",
+    "    noret = True\n",
+    "    real_name = region_name_1 if len(region_name_1) > len(region_name_2) else region_name_2\n",
+    "    for element in lst_1:\n",
+    "        if element in lst_2:\n",
+    "            return real_name\n",
+    "            noret = False\n",
+    "    if noret:\n",
+    "        for element_1 in lst_1:\n",
+    "            for element_2 in lst_2:\n",
+    "                if letter(element_1, element_2) >= 0.7:\n",
+    "                    return real_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['рсо', 'алания']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s_1 = 'Чувашская республика - Чувашия'\n",
-    "s_2 = 'Республика Северная Осетия - Алания'\n",
-    "s_2 = 'РСО - Алания'\n",
-    "wrd = words(s_2)\n",
-    "wrd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['чувашская', 'чувашия']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -309,23 +170,68 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>3. Адрес МО. Наим. субъекта РФ_x</th>\n",
-       "      <th>3. Адрес МО. Наим. субъекта РФ_y</th>\n",
+       "      <th>region_name</th>\n",
        "      <th>real_region_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Кемеровская область</td>\n",
+       "      <td>Кемеровская область - Кузбасс</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Кемеровская область - Кузбасс</td>\n",
+       "      <td>Кемеровская область - Кузбасс</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Республика Адыгея</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Республика Татарстан</td>\n",
+       "      <td>Республика Татарстан (Татарстан)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Республика Татарстан (Татарстан)</td>\n",
+       "      <td>Республика Татарстан (Татарстан)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Чувашская Республика</td>\n",
+       "      <td>Чувашская Республика - Чувашия</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Чувашская Республика - Чувашия</td>\n",
+       "      <td>Чувашская Республика - Чувашия</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [3. Адрес МО. Наим. субъекта РФ_x, 3. Адрес МО. Наим. субъекта РФ_y, real_region_name]\n",
-       "Index: []"
+       "                        region_name                  real_region_name\n",
+       "0               Кемеровская область     Кемеровская область - Кузбасс\n",
+       "1     Кемеровская область - Кузбасс     Кемеровская область - Кузбасс\n",
+       "2                 Республика Адыгея        Республика Адыгея (Адыгея)\n",
+       "3        Республика Адыгея (Адыгея)        Республика Адыгея (Адыгея)\n",
+       "4              Республика Татарстан  Республика Татарстан (Татарстан)\n",
+       "5  Республика Татарстан (Татарстан)  Республика Татарстан (Татарстан)\n",
+       "6              Чувашская Республика    Чувашская Республика - Чувашия\n",
+       "7    Чувашская Республика - Чувашия    Чувашская Республика - Чувашия"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,88 +239,49 @@
    "source": [
     "df_crossregions = pd.merge(df_regions, df_regions, how=\"cross\")\n",
     "df_crossregions[\"real_region_name\"] = df_crossregions.apply(\n",
-    "    lambda row: region_name(\n",
+    "    lambda row: real_region_name(\n",
     "        row[\"3. Адрес МО. Наим. субъекта РФ_x\"], row[\"3. Адрес МО. Наим. субъекта РФ_y\"]\n",
     "    ),\n",
     "    axis=1,\n",
     ")\n",
     "df_realregions = df_crossregions.reset_index(drop=True)\n",
-    "df_realregions[\n",
-    "    (df_realregions[\"3. Адрес МО. Наим. субъекта РФ_x\"] == \"Чувашская республика\")\n",
-    "    & (~pd.isna(df_realregions[\"real_region_name\"]))\n",
-    "]"
+    "# df_realregions[\n",
+    "#     (df_realregions[\"3. Адрес МО. Наим. субъекта РФ_x\"] == \"Чувашская республика\")\n",
+    "#     & (~pd.isna(df_realregions[\"real_region_name\"]))\n",
+    "# ]\n",
+    "df_realregions = df_realregions.dropna().reset_index(drop=True)\n",
+    "df_realregions = df_realregions[\n",
+    "    df_realregions[\"3. Адрес МО. Наим. субъекта РФ_x\"]\n",
+    "    != df_realregions[\"3. Адрес МО. Наим. субъекта РФ_y\"]\n",
+    "]\n",
+    "# исключение из списка автозамены названий, не подвластных алгоритму\n",
+    "drop_regions_list = [\"Республика Алтай\",\n",
+    "                     \"Ямало-Ненецкий автономный округ\",\n",
+    "                     \"Республика Саха (Якутия)\",\n",
+    "                     \"Алтайский край\",\n",
+    "                     \"Ненецкий автономный округ\",\n",
+    "                     \"Сахалинская область\",\n",
+    "]\n",
+    "df_realregions = df_realregions.set_index(\"3. Адрес МО. Наим. субъекта РФ_x\")\n",
+    "for region_name in drop_regions_list:\n",
+    "    df_realregions.drop(region_name, axis=0,inplace=True)\n",
+    "df_realregions.reset_index(drop=True , inplace=True )\n",
+    "df_realregions = df_realregions.rename(columns={\"3. Адрес МО. Наим. субъекта РФ_y\": \"region_name\"})\n",
+    "df_realregions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lst = result_1 + result_2\n",
-    "ratio = len(set(lst))/len(lst)\n",
-    "ratio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5106382978723404"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarity(s_1, s_2)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.0 - совсем разные   \n",
-    "0.75 - один тип субъекта РФ   \n",
-    "0.6 - есть что-то общее   \n",
-    "если ratio < 0.60 - это один субъект   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['г', 'москва']"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result_1"
+    "***"
    ]
   },
   {
