--- a/work/scripts/personal.ipynb
+++ b/work/scripts/personal.ipynb
@@ -17,15 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 1.99 ms\n"
+      "CPU times: total: 93.8 ms\n",
+      "Wall time: 2.43 s\n"
      ]
     }
    ],
@@ -51,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 25.3 s\n",
-      "Wall time: 1min 9s\n"
+      "CPU times: total: 27 s\n",
+      "Wall time: 1min 11s\n"
      ]
     }
    ],
@@ -86,20 +86,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 31.2 ms\n",
+      "Wall time: 151 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region_name</th>\n",
+       "      <th>real_region_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Кемеровская область</td>\n",
+       "      <td>Кемеровская область - Кузбасс</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Республика Адыгея</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Республика Татарстан</td>\n",
+       "      <td>Республика Татарстан (Татарстан)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Чувашская Республика</td>\n",
+       "      <td>Чувашская Республика - Чувашия</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            region_name                  real_region_name\n",
+       "0   Кемеровская область     Кемеровская область - Кузбасс\n",
+       "2     Республика Адыгея        Республика Адыгея (Адыгея)\n",
+       "4  Республика Татарстан  Республика Татарстан (Татарстан)\n",
+       "6  Чувашская Республика    Чувашская Республика - Чувашия"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "%%time\n",
     "# список регионов\n",
-    "df_regions = pd.DataFrame(df_dt['3. Адрес МО. Наим. субъекта РФ']).drop_duplicates().reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_regions = pd.DataFrame(df_dt['3. Адрес МО. Наим. субъекта РФ']).drop_duplicates().reset_index(drop=True)\n",
+    "\n",
     "# функции\n",
     "def words(string):\n",
     "    \"\"\"возвращает список значимых слов в названии субъекта,\n",
@@ -141,102 +206,9 @@
     "        for element_1 in lst_1:\n",
     "            for element_2 in lst_2:\n",
     "                if letter(element_1, element_2) >= 0.7:\n",
-    "                    return real_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>region_name</th>\n",
-       "      <th>real_region_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Кемеровская область</td>\n",
-       "      <td>Кемеровская область - Кузбасс</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Кемеровская область - Кузбасс</td>\n",
-       "      <td>Кемеровская область - Кузбасс</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Республика Адыгея</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "      <td>Республика Адыгея (Адыгея)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Республика Татарстан</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "      <td>Республика Татарстан (Татарстан)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Чувашская Республика</td>\n",
-       "      <td>Чувашская Республика - Чувашия</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Чувашская Республика - Чувашия</td>\n",
-       "      <td>Чувашская Республика - Чувашия</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        region_name                  real_region_name\n",
-       "0               Кемеровская область     Кемеровская область - Кузбасс\n",
-       "1     Кемеровская область - Кузбасс     Кемеровская область - Кузбасс\n",
-       "2                 Республика Адыгея        Республика Адыгея (Адыгея)\n",
-       "3        Республика Адыгея (Адыгея)        Республика Адыгея (Адыгея)\n",
-       "4              Республика Татарстан  Республика Татарстан (Татарстан)\n",
-       "5  Республика Татарстан (Татарстан)  Республика Татарстан (Татарстан)\n",
-       "6              Чувашская Республика    Чувашская Республика - Чувашия\n",
-       "7    Чувашская Республика - Чувашия    Чувашская Республика - Чувашия"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "                    return real_name\n",
+    "                \n",
+    "# таблица замены\n",
     "df_crossregions = pd.merge(df_regions, df_regions, how=\"cross\")\n",
     "df_crossregions[\"real_region_name\"] = df_crossregions.apply(\n",
     "    lambda row: real_region_name(\n",
@@ -245,10 +217,6 @@
     "    axis=1,\n",
     ")\n",
     "df_realregions = df_crossregions.reset_index(drop=True)\n",
-    "# df_realregions[\n",
-    "#     (df_realregions[\"3. Адрес МО. Наим. субъекта РФ_x\"] == \"Чувашская республика\")\n",
-    "#     & (~pd.isna(df_realregions[\"real_region_name\"]))\n",
-    "# ]\n",
     "df_realregions = df_realregions.dropna().reset_index(drop=True)\n",
     "df_realregions = df_realregions[\n",
     "    df_realregions[\"3. Адрес МО. Наим. субъекта РФ_x\"]\n",
@@ -267,6 +235,7 @@
     "    df_realregions.drop(region_name, axis=0,inplace=True)\n",
     "df_realregions.reset_index(drop=True , inplace=True )\n",
     "df_realregions = df_realregions.rename(columns={\"3. Адрес МО. Наим. субъекта РФ_y\": \"region_name\"})\n",
+    "df_realregions = df_realregions[df_realregions[\"region_name\"] != df_realregions[\"real_region_name\"]]\n",
     "df_realregions"
    ]
   },
